gnome-shell: Fix user avatar size and spacing
Based on upstream commits:
https://gitlab.gnome.org/GNOME/gnome-shell/-/commit/6c6c89c63470b5dd9c24914ba471a119dca2ac66
https://gitlab.gnome.org/GNOME/gnome-shell/-/commit/89ca5e71d4efedcdbb1cacd9b172dc764750f656
https://gitlab.gnome.org/GNOME/gnome-shell/-/commit/967a6ae44d9b1d7a1dc00024fc6539f23dbb285b

https://github.com/jnsh/arc-theme/pull/68

--- a/common/gnome-shell/3.36/sass/_common.scss
+++ b/common/gnome-shell/3.36/sass/_common.scss
@@ -2432,14 +2432,31 @@ StScrollBar {
   &:hover {
     color: transparentize($fg_color, 0.3);
   }
+
+  & StIcon {
+    background-color: transparentize($osd_fg_color, 0.95);
+    border-radius: 99px;
+  }
 }
 
 .user-widget.vertical .user-icon {
   icon-size: 128px;
+
+  & StIcon {
+    padding: 20px;
+    padding-top: 18px;
+    padding-bottom: 22px;
+    width: 88px; height: 88px;
+  }
 }
 
 .user-widget.horizontal .user-icon {
   icon-size: 64px;
+
+  & StIcon {
+    padding: 12px;
+    width: 40px; height: 40px;
+  }
 }
 
 //
